--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -14,12 +14,16 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  height: 100%;
+  height: 1500px;
   padding: 0;
   margin: 0;
   overflow-x: hidden;
   font-family: "Arial", sans-serif;
   background-color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  
 }
 
 img {
